--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
-<div>Hola mundo</div>
-
-<router-outlet></router-outlet>
+<div class="landing">
+  <div class="landing__title">
+    <h1>{{appTitle}}</h1>
+  </div>
+  <div class="landing__description">
+    <h3>{{appDescription}}</h3>
+  </div>
+  <div class="landing__button">
+    <button>I'm a doctor!</button>
+  </div>
+  
+</div>
