--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,6 +32,8 @@ $gray-color: rgb(110, 110, 110);
   background-color: $primary-color;
   color: white;
   border-radius: 5%;
+  cursor: pointer;
+  text-decoration: none;
 }
 
 %hover-accent{
